--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="bg-gray-800 flex items-center justify-center h-screen">
     <div class="text-center">
       <img
-        src="/Images4Estate/house 360.png"
+        src="Images4Estate/house 360.png"
         alt="Ulo Logo"
         class="mx-auto mb-1 h-28 w-28 md:h-28 md:w-28"
       />
