--- a/estate1.html
+++ b/estate1.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="bg-[url('/Images4Estate/7a.jpg')] bg-cover bg-center h-screen">
+  <body class="bg-[url('Images4Estate/7a.jpg')] bg-cover bg-center h-screen">
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
@@ -199,7 +199,7 @@
             />
           </svg> -->
           <img
-            src="/Images4Estate/warning_Google.svg"
+            src="Images4Estate/warning_Google.svg"
             alt=""
             class="w-4 h-4 mr-1"
           />
