--- a/buildingdb2.html
+++ b/buildingdb2.html
@@ -60,7 +60,7 @@
             class="flex flex-col justify-center mx-auto items-center md:mx-4 pl-2"
           >
             <img
-              src="../Images4Estate/house_5 google.svg"
+              src="Images4Estate/house_5 google.svg"
               alt=""
               class="w-6 h-6 md:w-8 md:h-8 mr-4 md:mr-6"
             />
@@ -70,7 +70,7 @@
         <a href="tenantdb3.html">
           <div class="flex flex-col justify-center mx-auto items-center">
             <img
-              src="../Images4Estate/Persons groups.svg"
+              src="Images4Estate/Persons groups.svg"
               alt=""
               class="w-6 h-6 md:w-8 md:h-8 mr-4"
             />
@@ -107,7 +107,7 @@
             />
             <img
               id="searchImage"
-              src="../Images4Estate/Search.256.png"
+              src="Images4Estate/Search.256.png"
               alt="Search Image"
               class="h-8 w-8 md:h-10 md:w-10 rounded-tr rounded-br bg-green-400 hover:bg-blue-400 p-1 mr-0 md:mr-8 cursor-pointer"
             />
@@ -118,7 +118,7 @@
         <button id="addButton" class="ml-4 text-white mr-2 md:mr-4">
           <div class="flex flex-col justify-center mx-auto items-center">
             <img
-              src="../Images4Estate/add_home Google.svg"
+              src="Images4Estate/add_home Google.svg"
               alt=""
               class="w-6 h-6 md:w-8 md:h-8 mr-4 md:mr-6"
             />
@@ -132,7 +132,7 @@
         <a href="index.html">
           <div class="flex flex-col justify-center mx-auto items-center">
             <img
-              src="../Images4Estate/logout_Google.svg"
+              src="Images4Estate/logout_Google.svg"
               alt=""
               class="w-6 h-6 md:w-8 md:h-8 mr-2"
             />
@@ -528,9 +528,9 @@
                           </div>
                       </div>
                       <div class="flex space-x-2">
-                              <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-green-600 shadow-md text-white p-0 rounded shareButton"><img src="../Images4Estate/share_google.svg" alt="" class="w-7 h-7" /></button>
-                              <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-gray-600 shadow-md text-white p-0 rounded editButton"><img src="../Images4Estate/edit_google.svg" alt="" class="w-7 h-7" /></button>
-                              <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-red-600  shadow-md text-white p-0 rounded deleteButton"><img src="../Images4Estate/delete_Bin Google.svg" alt="" class="w-7 h-7" /></button>
+                              <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-green-600 shadow-md text-white p-0 rounded shareButton"><img src="Images4Estate/share_google.svg" alt="" class="w-7 h-7" /></button>
+                              <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-gray-600 shadow-md text-white p-0 rounded editButton"><img src="Images4Estate/edit_google.svg" alt="" class="w-7 h-7" /></button>
+                              <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-red-600  shadow-md text-white p-0 rounded deleteButton"><img src="Images4Estate/delete_Bin Google.svg" alt="" class="w-7 h-7" /></button>
                           </div>
                   </div>
 
