--- a/tenantdb3.html
+++ b/tenantdb3.html
@@ -56,7 +56,7 @@
             class="flex flex-col justify-center mx-auto items-center md:mx-4 pl-2"
           >
             <img
-              src="../Images4Estate/house_5 google.svg"
+              src="Images4Estate/house_5 google.svg"
               alt=""
               class="w-6 h-6 md:w-8 md:h-8 mr-4 md:mr-6"
             />
@@ -66,7 +66,7 @@
         <a href="buildingdb2.html">
           <div class="flex flex-col justify-center mx-auto items-center">
             <img
-              src="../Images4Estate/house_3 google.svg"
+              src="Images4Estate/house_3 google.svg"
               alt=""
               class="w-6 h-6 md:w-8 md:h-8 mr-4"
             />
@@ -105,7 +105,7 @@
             />
             <img
               id="searchImage"
-              src="../Images4Estate/Search.256.png"
+              src="Images4Estate/Search.256.png"
               alt="Search Image"
               class="h-8 w-8 md:h-10 md:w-10 rounded-tr rounded-br bg-blue-400 hover:bg-green-400 p-1 mr-4 md:mr-8 cursor-pointer"
             />
@@ -119,7 +119,7 @@
         >
           <div class="flex flex-col justify-center mx-auto items-center">
             <img
-              src="../Images4Estate/person_add_gooleFont.svg"
+              src="Images4Estate/person_add_gooleFont.svg"
               alt=""
               class="w-6 h-6 md:w-8 md:h-8 mr-4 md:mr-3"
             />
@@ -133,7 +133,7 @@
         <a href="index.html">
           <div class="flex flex-col justify-center mx-auto items-center">
             <img
-              src="../Images4Estate/logout_Google.svg"
+              src="Images4Estate/logout_Google.svg"
               alt=""
               class="w-6 h-6 md:w-8 md:h-8 mr-2"
             />
@@ -549,9 +549,9 @@
             </div>
           
             <div class="flex space-x-2 items-center">
-                <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-green-600 shadow-md text-white p-0 rounded share-button"><img src="../Images4Estate/share_google.svg" alt="" class="w-7 h-7" /></button>
-                <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-gray-600 shadow-md text-white p-0 rounded update-button"><img src="../Images4Estate/person_edit_Google.svg" alt="" class="w-7 h-7" /></button>
-                <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-red-600  shadow-md text-white p-0 rounded delete-button"><img src="../Images4Estate/person_cancel_Google.svg" alt="" class="w-7 h-7" /></button>
+                <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-green-600 shadow-md text-white p-0 rounded share-button"><img src="Images4Estate/share_google.svg" alt="" class="w-7 h-7" /></button>
+                <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-gray-600 shadow-md text-white p-0 rounded update-button"><img src="Images4Estate/person_edit_Google.svg" alt="" class="w-7 h-7" /></button>
+                <button class="w-9 h-9 flex items-center justify-center border border-white-800 bg-red-600  shadow-md text-white p-0 rounded delete-button"><img src="Images4Estate/person_cancel_Google.svg" alt="" class="w-7 h-7" /></button>
             </div>
         `;
           tenantList.appendChild(tenantDiv);
