--- a/estate1.html
+++ b/estate1.html
@@ -13,7 +13,8 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="bg-[url('Images4Estate/7a.jpg')] bg-cover bg-center h-screen">
+  <!-- <body class="bg-[url('Images4Estate/7a.jpg')] bg-cover bg-center h-screen"> -->
+  <body style="background-image: url('Images4Estate/7a.jpg');" class="bg-cover bg-center h-screen">
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
