--- a/estate1.html
+++ b/estate1.html
@@ -24,7 +24,7 @@
           class="flex items-center space-x-2 md:space-x-3 rtl:space-x-reverse pointer-events-none"
         >
           <img
-            src="/Images4Estate/house 360.png"
+            src="Images4Estate/house 360.png"
             class="h-10"
             alt="The Logo"
           />
@@ -102,7 +102,7 @@
         <a href="index.html">
           <div class="flex flex-col justify-center mx-auto items-center">
             <img
-              src="../Images4Estate/logout_Google.svg"
+              src="Images4Estate/logout_Google.svg"
               alt=""
               class="w-6 h-6 md:w-8 md:h-8 mr-2"
             />
