--- a/tenantdb3.html
+++ b/tenantdb3.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ulo Tenants' page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="../Images4Estate/Favicon3 32x32 pngegg.png"
+      sizes="32x32"
+    />
     <!-- <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
