--- a/buildingdb2.html
+++ b/buildingdb2.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ulo Building's page</title>
     <link
+      rel="icon"
+      type="image/png"
+      href="../Images4Estate/Favicon3 32x32 pngegg.png"
+      sizes="32x32"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
