--- a/estate1.html
+++ b/estate1.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ulo Welcome page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="../Images4Estate/Favicon3 32x32 pngegg.png"
+      sizes="32x32"
+    />
     <link rel="stylesheet" href="output.css" />
     <link
       rel="stylesheet"
