--- a/estate1.html
+++ b/estate1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ulo Welcome page</title>
+    <link rel="manifest" href="manifest.json" />
     <link
       rel="icon"
       type="image/png"
@@ -214,5 +215,24 @@
         >
       </div>
     </div>
+
+    <!-- Register service Worker for progressive Web App (WPA) -->
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker.register("/service-worker.js").then(
+            (registration) => {
+              console.log(
+                "ServiceWorker registration successful with scope: ",
+                registration.scope
+              );
+            },
+            (error) => {
+              console.log("ServiceWorker registration failed: ", error);
+            }
+          );
+        });
+      }
+    </script>
   </body>
 </html>
