--- a/buildingdb2.html
+++ b/buildingdb2.html
@@ -11,18 +11,18 @@
       href="Images4Estate/Favicon3 32x32 pngegg.png"
       sizes="32x32"
     />
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
-    />
-    <!-- <link rel="stylesheet" href="output.css" />
+    />  -->
+    <link rel="stylesheet" href="output.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
       integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> -->
+    />
     <style>
       .modal-content {
         /* max-height: 80vh; */
