--- a/buildingdb2.html
+++ b/buildingdb2.html
@@ -11,10 +11,10 @@
       href="Images4Estate/Favicon3 32x32 pngegg.png"
       sizes="32x32"
     />
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
-    />  -->
+    /> 
     <link rel="stylesheet" href="output.css" />
     <link
       rel="stylesheet"
