--- a/tenantdb3.html
+++ b/tenantdb3.html
@@ -743,22 +743,8 @@
         }
       });
 
-      // Register service Worker for progressive Web App (WPA)
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker.register("/service-worker.js").then(
-            (registration) => {
-              console.log(
-                "ServiceWorker registration successful with scope: ",
-                registration.scope
-              );
-            },
-            (error) => {
-              console.log("ServiceWorker registration failed: ", error);
-            }
-          );
-        });
-      }
+      // Register service Worker for progressive Web App (WPA) Below.
+     
     </script>
   </body>
 </html>
