--- a/estate1.html
+++ b/estate1.html
@@ -218,7 +218,21 @@
 
     <!-- Register service Worker for progressive Web App (WPA) inside the script tag below -->
     <script>
-      
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker.register("/service-worker.js").then(
+            (registration) => {
+              console.log(
+                "ServiceWorker registration successful with scope: ",
+                registration.scope
+              );
+            },
+            (error) => {
+              console.log("ServiceWorker registration failed: ", error);
+            }
+          );
+        });
+      }
     </script>
   </body>
 </html>
