--- a/index.html
+++ b/index.html
@@ -426,7 +426,8 @@
           };
         }
       });
-
+    </script>
+    <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
           navigator.serviceWorker.register("/service-worker.js").then(
@@ -442,7 +443,6 @@
           );
         });
       }
-
     </script>
   </body>
 </html>
