--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
-          navigator.serviceWorker.register("/service-worker.js").then(
+          navigator.serviceWorker.register("/Ulo/service-worker.js").then(
             (registration) => {
               console.log(
                 "ServiceWorker registration successful with scope: ",
