--- a/estate1.html
+++ b/estate1.html
@@ -22,7 +22,7 @@
   </head>
   <!-- <body class="bg-[url('Images4Estate/7a.jpg')] bg-cover bg-center h-screen"> -->
   <body style="background-image: url('Images4Estate/7a.jpg');" class="bg-cover bg-center h-screen">
-    <nav class="bg-white border-gray-200 dark:bg-gray-900">
+    <nav class="bg-gray-900 border-gray-200 dark:bg-gray-900">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
       >
@@ -124,7 +124,7 @@
     </nav>
 
     <div
-      class="mx-auto mt-28 mb-28 w-3/4 max-w-sm p-4 bg-white border-2 border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700"
+      class="mx-auto mt-28 mb-28 w-3/4 max-w-sm p-4 bg-gray-900 border-2 border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700"
     >
       <h5
         class="mb-10 text-center text-base font-semibold text-gray-900 md:text-xl dark:text-white"
