--- a/estate1.html
+++ b/estate1.html
@@ -36,7 +36,7 @@
             alt="The Logo"
           />
           <span
-            class="self-center text-2xl md:text-3xl font-semibold whitespace-nowrap dark:text-white"
+            class="self-center text-2xl text-white md:text-3xl font-semibold whitespace-nowrap dark:text-white"
             >Ulo</span
           >
         </a>
