--- a/estate1.html
+++ b/estate1.html
@@ -22,7 +22,7 @@
   </head>
   <!-- <body class="bg-[url('Images4Estate/7a.jpg')] bg-cover bg-center h-screen"> -->
   <body style="background-image: url('Images4Estate/7a.jpg');" class="bg-cover bg-center h-screen">
-    <nav class="bg-gray-900 border-gray-200 dark:bg-gray-900">
+    <nav class="bg-gray-800 border-gray-200 ">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
       >
@@ -36,7 +36,7 @@
             alt="The Logo"
           />
           <span
-            class="self-center text-2xl text-white md:text-3xl font-semibold whitespace-nowrap dark:text-white"
+            class="self-center text-2xl text-white md:text-3xl font-semibold whitespace-nowrap"
             >Ulo</span
           >
         </a>
