--- a/estate1.html
+++ b/estate1.html
@@ -124,7 +124,7 @@
     </nav>
 
     <div
-      class="mx-auto mt-28 mb-28 w-3/4 max-w-sm p-4 bg-gray-900 border-2 border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700"
+      class="mx-auto mt-28 mb-28 w-3/4 max-w-sm p-4 bg-gray-900 border-2 border-gray-700 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700"
     >
       <h5
         class="mb-10 text-center text-white text-base font-semibold text-gray-900 md:text-xl dark:text-white"
@@ -138,7 +138,7 @@
         <li>
           <a
             href="buildingdb2.html"
-            class="flex items-center p-3 text-base font-bold text-gray-900 rounded-lg bg-gray-100 hover:bg-gray-100 group hover:shadow dark:bg-gray-600 dark:hover:bg-gray-500 dark:text-white"
+            class="flex items-center p-3 text-base font-bold text-white rounded-lg bg-gray-600 hover:bg-gray-100 group hover:shadow dark:bg-gray-600 dark:hover:bg-gray-500 dark:text-white"
           >
             <i class="fa-solid fa-house fill-blue-400"></i>
 
@@ -152,7 +152,7 @@
         <li>
           <a
             href="tenantdb3.html"
-            class="flex items-center p-3 text-base font-bold text-gray-900 rounded-lg bg-gray-50 hover:bg-gray-100 group hover:shadow dark:bg-gray-600 dark:hover:bg-gray-500 dark:text-white"
+            class="flex items-center p-3 text-base font-bold text-white bg-gray-600 rounded-lg bg-gray-50 hover:bg-gray-100 group hover:shadow dark:bg-gray-600 dark:hover:bg-gray-500 dark:text-white"
           >
             <i class="fa-duotone fa-solid fa-user"></i>
             <span class="flex-1 ms-3 whitespace-nowrap">TENANTS</span>
