--- a/estate1.html
+++ b/estate1.html
@@ -124,7 +124,7 @@
     </nav>
 
     <div
-      class="mx-auto mt-28 mb-28 w-3/4 max-w-sm p-4 bg-gray-900 border-2 border-gray-700 rounded-lg shadow sm:p-6 dark:bg-gray-800 "
+      class="mx-auto mt-28 mb-28 w-3/4 max-w-sm p-4 bg-gray-900 border-2 border-gray-700 rounded-lg shadow sm:p-6 "
     >
       <h5
         class="mb-10 text-center text-white text-base font-semibold text-gray-900 md:text-xl dark:text-white"
