--- a/estate1.html
+++ b/estate1.html
@@ -124,7 +124,7 @@
     </nav>
 
     <div
-      class="mx-auto mt-28 mb-28 w-3/4 max-w-sm p-4 rounded-lg shadow sm:p-6 bg-gray-900 border-blue-100 border-4  "
+      class="mx-auto mt-28 mb-28 w-3/4 max-w-sm p-4 rounded-lg shadow sm:p-6 bg-gray-900 border-gray-500 border-2  "
     >
       <h5
         class="mb-10 text-center text-white text-base font-semibold text-gray-900 md:text-xl dark:text-white"
