--- a/estate1.html
+++ b/estate1.html
@@ -22,7 +22,7 @@
   </head>
   <!-- <body class="bg-[url('Images4Estate/7a.jpg')] bg-cover bg-center h-screen"> -->
   <body style="background-image: url('Images4Estate/7a.jpg');" class="bg-cover bg-center h-screen">
-    <nav class="bg-gray-900 border-gray-700 border-b-4 ">
+    <nav class="bg-gray-900 border-blue-100 border-b-2 ">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
       >
@@ -124,7 +124,7 @@
     </nav>
 
     <div
-      class="mx-auto mt-28 mb-28 w-3/4 max-w-sm p-4 rounded-lg shadow sm:p-6 bg-gray-900 border-gray-500 border-2  "
+      class="mx-auto mt-28 mb-28 w-3/4 max-w-sm p-4 rounded-lg shadow sm:p-6 bg-gray-900 border-gray-500 border-2"
     >
       <h5
         class="mb-10 text-center text-white text-base font-semibold text-gray-900 md:text-xl dark:text-white"
