--- a/estate1.html
+++ b/estate1.html
@@ -132,7 +132,7 @@
         Welcome!
       </h5>
       <p class="text-sm font-normal text-gray-500 dark:text-gray-400">
-        Click on any option below to navigate there.
+        Click on an option below to navigate there.
       </p>
       <ul class="my-4 space-y-3">
         <li>
